# mkeybo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Pipfile  README.md  TODO.md
fritzing/: example_keypad_3x3.fzz
hidtester/: hidtester.py
keyboards/boomeplanck/: CMakeLists.txt  boomeplanck-legacy.uf2  config.hpp  factories.cpp  factories.hpp  keyboard.hpp  keyboard_settings.cpp  keyboard_settings.hpp  main.cpp  pwm_led.hpp  settings.hpp  status_leds.hpp  utils.hpp
keyboards/lwings/: CMakeLists.txt  README.md  config.hpp  config.json  debug.cpp  debug.hpp  display.cpp  display.hpp  display_config.hpp  factories.cpp  factories.hpp  keyboard.cpp  keyboard.hpp  logo.hpp  main.cpp  status_display.cpp  status_display.hpp
mkeybo/: consts.hpp  debug.hpp  factories.hpp  utils.hpp
mkeybo/components/: KeyMapper.hpp  Keyboard.hpp  KeyboardConfig.hpp  KeyboardSettings.hpp  KeyboardState.hpp  MappingRules.hpp  SwitchEvents.hpp  SwitchReader.hpp  SwitchReaderMatrix.hpp  UsbReporter.hpp  actions.hpp  base.hpp  hid_controller.hpp  hid_controller_settings.hpp  input_device.hpp  input_device_settings.hpp  key_mapper.hpp  keyboard.hpp  keyboard_settings.hpp  keyboard_state.hpp  keycode_event_buffer.hpp  keycode_mapping_rules.hpp  mapping_rules.hpp  switch_events.hpp  switch_reader.hpp  switch_reader_matrix.hpp  usb_reporter.hpp  usb_reports.hpp
mkeybo/components/actions/: base_action.hpp  reboot_actions.hpp
mkeybo/components/key_mapper/: BaseMappingRule.hpp  ChangeLayerMappingRule.hpp  ChangeLayoutMappingRule.hpp  DefaultMappingRule.hpp  FinalizeMappingRule.hpp  KeyMapper.hpp  TapDanceMappingRule.hpp  base_mapping_rule.hpp  change_layer_mapping_rule.hpp  change_layout_mapping_rule.hpp  default_mapping_rule.hpp  finalize_mapping_rule.hpp  key_mapper.hpp  multi_mapping_rule.hpp  tap_dance_mapping_rule.hpp
mkeybo/components/keyboard/: keyboard_settings.hpp  keycode_event_buffer.hpp  layer.hpp  led_status.hpp  mapping_rule.hpp  settings.hpp  switch_events_generator.hpp  switch_reader.hpp
mkeybo/components/keyboard/mapping_rules/: change_layer_mapping_rule.hpp  change_layout_mapping_rule.hpp  default_mapping_rule.hpp  multi_mapping_rule.hpp  multi_mapping_rule_settings.hpp  tap_dance_mapping_rule.hpp  tap_dance_mapping_rule_settings.hpp
mkeybo/components/keyboard/switch_readers/: direct_switch_reader.hpp  matrix_switch_reader.hpp
mkeybo/components/keyboard_rule_settings/: base_rule_settings.hpp  multi_rule_settings.hpp  tap_dance_rule_settings.hpp
mkeybo/components/keycode_mapping_rules/: base_mapping_rule.hpp  change_layer_mapping_rule.hpp  change_layout_mapping_rule.hpp  default_mapping_rule.hpp  multi_mapping_rule.hpp  tap_dance_mapping_rule.hpp
mkeybo/components/mapping_rules/: base_mapping_rule.hpp  change_layer_mapping_rule.hpp  change_layout_mapping_rule.hpp  default_mapping_rule.hpp  multi_mapping_rule.hpp  tap_dance_mapping_rule.hpp
mkeybo/components/switch_readers/: direct_switch_reader.hpp  matrix_switch_reader.hpp
mkeybo/defaults/: tusb_config.h  usb_callbacks.cpp  usb_descriptors.cpp
src/: tusb_config.h  usb_descriptors.c  usb_descriptors.h
src/components/: Actions.h  CircularBuffer.h  HIDRaportGenerator.h  HIDRaporter.h  HIDReporter.h  Keyboard.h  KeyboardConfig.h  KeyboardMapper.h  KeyboardState.h  LedBlinker.h  PWMLed.h  SwitchMatrix.h  SwitchReader.h  SwitchStateUpdater.h  utils.h
src/keyboards/boomeplanck/: Keyboard.h  config.h  factories.cpp  keyboard.cpp  mapping.h
tests/: fixtures.hpp  main_tests.cpp  test_change_layer_mapping_rule.cpp  test_change_layer_mapping_rule.hpp  test_change_layout_mapping_rule.cpp  test_change_layout_mapping_rule.hpp  test_circular_buffer.cpp  test_default_mapping_rule.cpp  test_default_mapping_rule.hpp  test_finalize_mappign_rule.cpp  test_finalize_mappign_rule.hpp  test_key_mapper.cpp  test_key_mapper.hpp  test_keyboard_matrix.cpp  test_keyboard_state.cpp  test_keycode_buffer.cpp  test_keycode_buffer.hpp  test_multi_mapping_rule.cpp  test_multi_mapping_rule.hpp  test_switch_events.cpp  test_switch_events.hpp  test_switches_state_updater.cpp  test_tap_dance_mapping_rule.cpp  test_tap_dance_mapping_rule.hpp  test_usb_reporter.cpp  test_usb_reporter.hpp  tests.cpp
tools/: make_config.py
